--- a/doti3/i3blocks.conf
+++ b/doti3/i3blocks.conf
@@ -139,7 +139,8 @@ color=#00bffaff # JELLYBEAN_S COLOR_SCHEME
 [NordVPN]
 interval=30
 label=
-command=~/.i3/vpnNord.sh
+# command=~/.i3/vpnNord.sh
+command=~/.i3/vpnGeneric.sh
 color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
 
 [load]
@@ -306,8 +307,8 @@ color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE
 # OpenVPN support
 #
 # Support multiple VPN, with colors.
-#[openvpn]
-#interval=20
+# [openvpn]
+# interval=20
 
 # Temperature
 #
