--- a/doti3/config
+++ b/doti3/config
@@ -403,6 +403,7 @@ bindsym $mod+Shift+x exec ~/.i3/shutdown_menu -p rofi
 # enables transparency
 # exec --no-startup-id compton --config ~/.config/compton.conf -b
 
+exec_always --no-startup-id "picom --config ~/.picom.conf --experimental-backends"
 # show background wallpaper
 #exec_always --no-startup-id feh --bg-fill /usr/share/wallpapers/Next/contents/images/1920x1080.png
 #
