--- a/doti3/config
+++ b/doti3/config
@@ -356,7 +356,7 @@ bindsym $mod+F4 exec xbacklight -set 100 # INCREASE Screen brightness
 #exec google-chrome
 
 # setup monitors, generete the file with "arandr" utility
-exec --no-startup-id ~/.i3/swapLayout.sh
+# exec --no-startup-id ~/.i3/swapLayout.sh
 #~/.screenlayout/Single.sh
 bindsym $mod+Shift+p exec ~/.i3/swapLayout.sh
 bindsym $mod+Shift+o exec ~/.i3/externOnly.sh
