--- a/doti3/i3blocks.conf
+++ b/doti3/i3blocks.conf
@@ -136,11 +136,21 @@ color=#00bffaff # JELLYBEAN_S COLOR_SCHEME
 # command=~/.i3/uhk_fuss.sh
 # color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
 
+# Temperature
+#
+# Support multiple chips, though lm-sensors.
+# The script may be called with -w and -c switches to specify thresholds,
+# see the script for details.
+[temperature]
+label=
+interval=10
+color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
+
 [NordVPN]
 interval=30
 label=
-# command=~/.i3/vpnNord.sh
-command=~/.i3/vpnGeneric.sh
+command=~/.i3/vpnNord.sh
+# command=~/.i3/vpnGeneric.sh
 color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
 
 [load]
@@ -309,15 +319,6 @@ color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE
 # Support multiple VPN, with colors.
 # [openvpn]
 # interval=20
-
-# Temperature
-#
-# Support multiple chips, though lm-sensors.
-# The script may be called with -w and -c switches to specify thresholds,
-# see the script for details.
-#[temperature]
-#label=TEMP
-#interval=10
 
 # Key indicators
 #
