--- a/doti3/config
+++ b/doti3/config
@@ -30,6 +30,8 @@ exec_always  --no-startup-id "sleep 2; keynav"
 
 exec --no-startup-id "sleep 4; frakkin-xkb ~/.i3/setKeyboard.sh &"
 
+exec_always  --no-startup-id "sleep 1; ~/.i3/thinkpad_power_management/nvidiaEnable.sh"
+
 # exec --no-startup-id "sleep 5; ~/.i3/vpnconnect.sh"
 
 # exec --no-startup-id "alsactl restore"
@@ -303,7 +305,7 @@ bar {
 
 # i3bar position
   position bottom
-  tray_output primary
+  # tray_output --primary
   # tray_output DP-4
   # tray_output VGA-1-1
   # status_command i3status ~/.i3/my_i3status.sh
