Adding more configs for thinkpad

--- a/doti3/thinkpad_power_management/xorg.conf
+++ b/doti3/thinkpad_power_management/xorg.conf
@@ -36,6 +36,7 @@ Section "Device"
     VendorName     "NVIDIA Corporation"
     BoardName      "GeForce MX250"
     Option         "RegistryDwords" "PowerMizerEnable=0x1; PerfLevelSrc=0x2222; PowerMizerDefault=0x3; PowerMizerDefaultAC=0x3"
+    Option         "Coolbits" "31"
 EndSection
 
 Section "Device"
@@ -46,5 +47,6 @@ EndSection
 Section "Screen"
     Identifier     "Screen0"
     Device         "dGPU"
+    Option         "Coolbits" "31"
 EndSection
 
