--- a/doti3/config
+++ b/doti3/config
@@ -345,13 +345,15 @@ bindsym $mod+d exec "rofi -combi-modi drun,run -show combi -modi combi -location
 # bindsym $mod+F7 exec --no-startup-id pactl set-sink-mute 0 toggle # mute sound
 # bindsym XF86AudioRaiseVolume exec --no-startup-id pactl -- set-sink-volume +10%
 # bindsym XF86AudioLowerVolume exec --no-startup-id pactl -- set-sink-volume -10%
-# bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle
+bindsym XF86AudioMicMute exec "amixer set Capture toggle"
 
 # Sreen brightness controls
-bindsym $mod+F1 exec xbacklight -dec 10 # decrease screen brightness
+bindsym XF86MonBrightnessUp exec "sudo ~/.i3/thinkpad_power_management/setBrightness.sh +"
+bindsym XF86MonBrightnessDown exec "sudo ~/.i3/thinkpad_power_management/setBrightness.sh -"
+# bindsym $mod+F1 exec xbacklight -dec 10 # decrease screen brightness
 #bindsym $mod+F2 exec xbacklight -inc 10 # INCREASE Screen brightness
-bindsym $mod+F3 exec xbacklight -set 0 # INCREASE Screen brightness
-bindsym $mod+F4 exec xbacklight -set 100 # INCREASE Screen brightness
+# bindsym $mod+F3 exec xbacklight -set 0 # INCREASE Screen brightness
+# bindsym $mod+F4 exec xbacklight -set 100 # INCREASE Screen brightness
 
 # Startup programs
 # exec --no-startup-id nm-applet
