--- a/doti3/config
+++ b/doti3/config
@@ -281,6 +281,7 @@ for_window [ class="resolve" title="Secondary Screen" ] move to workspace number
 
  # Start i3bar to display a workspace bar (plus the system information i3status
  # finds out, if available)
+exec_always  --no-startup-id  "if ( xrandr --query | grep eDP-1-1 ); then; xrandr --output eDP-1-1 --primary; else xrandr --output eDP-1 --primary; fi"
 bar {
     status_command i3blocks -c ~/.i3/i3blocks.conf
     font pango: lode, FontAwesome 10
@@ -305,7 +306,7 @@ bar {
 
 # i3bar position
   position bottom
-  # tray_output --primary
+  tray_output primary
   # tray_output DP-4
   # tray_output VGA-1-1
   # status_command i3status ~/.i3/my_i3status.sh
@@ -355,6 +356,9 @@ bindsym XF86MonBrightnessDown exec "sudo ~/.i3/thinkpad_power_management/setBrig
 # bindsym $mod+F3 exec xbacklight -set 0 # INCREASE Screen brightness
 # bindsym $mod+F4 exec xbacklight -set 100 # INCREASE Screen brightness
 
+bindsym XF86Display exec "arandr"
+
+bindsym XF86Bluetooth exec "bluetooth toggle"
 # Startup programs
 # exec --no-startup-id nm-applet
 #exec google-chrome
