--- a/doti3/i3blocks.conf
+++ b/doti3/i3blocks.conf
@@ -136,6 +136,12 @@ color=#00bffaff # JELLYBEAN_S COLOR_SCHEME
 # command=~/.i3/uhk_fuss.sh
 # color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
 
+[ValveIndex]
+interval=3600
+label=
+command=~/localpath/index_fuss.sh
+color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
+
 # Temperature
 #
 # Support multiple chips, though lm-sensors.
