--- a/doti3/i3blocks.conf
+++ b/doti3/i3blocks.conf
@@ -114,6 +114,7 @@ label=ROS_IP
 interval=20
 command=$HOME/.i3/ros_ip.sh
 # color=#000000 # LIGHT COLOR_SCHEME 
+# color=#af00ffff # JELLYBEANS COLOR_SCHEME ACTIVE 
 color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
 
 # [rosmasteruri]
@@ -121,6 +122,7 @@ color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE
 # interval=20
 # command=$HOME/.i3/ros_master_uri.sh
 ## color=#000000 # LIGH_T COLOR_SCHEME 
+# color=#af00ffff # JELLYBEAN_S COLOR_SCHEME 
 color=#00bffaff # JELLYBEAN_S COLOR_SCHEME 
 
 # [uav_name]
@@ -128,19 +130,20 @@ color=#00bffaff # JELLYBEAN_S COLOR_SCHEME
 # interval=20
 # command=$HOME/.i3/uav_name.sh
 ## color=#000000 # LIGH_T COLOR_SCHEME 
+# color=#af00ffff # JELLYBEAN_S COLOR_SCHEME 
 color=#00bffaff # JELLYBEAN_S COLOR_SCHEME 
 
 # [UHK]
 # interval=3600
 # label=
 # command=~/.i3/uhk_fuss.sh
-# color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
+# color=#00bffaff
 
-[ValveIndex]
-interval=3600
-label=
-command=~/localpath/index_fuss.sh
-color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
+# [ValveIndex]
+# interval=300
+# label=
+# command=~/localpath/index_fuss_2.sh
+# color=#00bffaff
 
 # Temperature
 #
@@ -150,6 +153,7 @@ color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE
 [temperature]
 label=
 interval=10
+# color=#af00ffff # JELLYBEANS COLOR_SCHEME ACTIVE 
 color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
 
 [NordVPN]
@@ -164,6 +168,7 @@ interval=10
 label= 
 command=cat /proc/loadavg | cut -d' ' -f1-1
 # color=#000000 # LIGHT COLOR_SCHEME 
+# color=#af00ffff # JELLYBEANS COLOR_SCHEME ACTIVE 
 color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
 
 # Network interface monitoring
@@ -173,6 +178,7 @@ color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE
 [iface]
 instance=enx00133b85141c
 # color=#000000 # LIGHT COLOR_SCHEME 
+# color=#af00ffff # JELLYBEANS COLOR_SCHEME ACTIVE 
 color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
 interval=10
 separator=true
@@ -180,6 +186,7 @@ separator=true
 [iface]
 instance=wlp58s0
 # color=#000000 # LIGHT COLOR_SCHEME 
+# color=#af00ffff # JELLYBEANS COLOR_SCHEME ACTIVE 
 color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
 interval=10
 separator=true
@@ -199,6 +206,7 @@ separator=true
 interval=20
 command=~/git/linux-setup/appconfig/i3/i3blocks/memory 5 pulse
 # color=#000000 # LIGHT COLOR_SCHEME 
+# color=#af00ffff # JELLYBEANS COLOR_SCHEME ACTIVE 
 color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
 
 # [memory]
@@ -220,6 +228,7 @@ label=
 #instance=/mnt/data
 interval=30
 # color=#000000 # LIGHT COLOR_SCHEME 
+# color=#af00ffff # JELLYBEANS COLOR_SCHEME ACTIVE 
 color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
 separator=true
 
@@ -229,6 +238,7 @@ label=
 command=$HOME/.i3/gpu_selection_display.sh
 interval=30
 # color=#000000 # LIGHT COLOR_SCHEME 
+# color=#af00ffff # JELLYBEANS COLOR_SCHEME ACTIVE 
 color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
 separator=true
 
@@ -238,6 +248,7 @@ separator=true
 # interval=10
 # separator=true
 ## color=#000000 # LIGH_T COLOR_SCHEME 
+# color=#af00ffff # JELLYBEAN_S COLOR_SCHEME 
 color=#00bffaff # JELLYBEAN_S COLOR_SCHEME 
 
 #[bandwidth]
@@ -270,6 +281,7 @@ interval=1
 signal=10
 command=~/.i3/i3blocks/volume 5 pulse
 # color=#000000 # LIGHT COLOR_SCHEME 
+# color=#af00ffff # JELLYBEANS COLOR_SCHEME ACTIVE 
 color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
 
 # Battery indicator
@@ -281,6 +293,7 @@ label=
 instance=0
 interval=30
 # color=#000000 # LIGHT COLOR_SCHEME 
+# color=#af00ffff # JELLYBEANS COLOR_SCHEME ACTIVE 
 color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
 
 [keyboard]
@@ -288,6 +301,7 @@ label=
 interval=20
 command=~/.i3/show_keyboard_layout.sh
 # color=#000000 # LIGHT COLOR_SCHEME 
+# color=#af00ffff # JELLYBEANS COLOR_SCHEME ACTIVE 
 color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
 
 # #transparent space for conky
@@ -302,6 +316,7 @@ command=date '+%d.%m.%Y %a %H:%M:%S'
 interval=1
 separator=true
 # color=#000000 # LIGHT COLOR_SCHEME 
+# color=#af00ffff # JELLYBEANS COLOR_SCHEME ACTIVE 
 color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
 
 # [clickme]
@@ -309,7 +324,8 @@ color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE
 # command=~/.i3/shutdown_menu -p rofi
 # separator=true
 # # color=#000000 # LIGHT COLOR_SCHEME 
-# color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
+color=#af00ffff # JELLYBEANS COLOR_SCHEME ACTIVE 
+color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
 
 # Generic media player support
 #
