--- a/doti3/i3blocks.conf
+++ b/doti3/i3blocks.conf
@@ -156,6 +156,13 @@ interval=10
 # color=#af00ffff # JELLYBEANS COLOR_SCHEME ACTIVE 
 color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
 
+[NordVPN-upgrdable]
+interval=3600
+label=
+command=~/.i3/vpnNord_upgradable.sh
+# command=~/.i3/vpnGeneric.sh
+color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
+
 [NordVPN]
 interval=30
 label=
