Updating the prime-select display script

--- a/doti3/i3blocks.conf
+++ b/doti3/i3blocks.conf
@@ -161,7 +161,7 @@ interval=3600
 label=
 command=~/.i3/vpnNord_upgradable.sh
 # command=~/.i3/vpnGeneric.sh
-color=#00bffaff # JELLYBEANS COLOR_SCHEME ACTIVE 
+color=#ff0000 # JELLYBEANS COLOR_SCHEME ACTIVE 
 
 [NordVPN]
 interval=30
