Storing various changes

--- a/doti3/config
+++ b/doti3/config
@@ -265,6 +265,8 @@ for_window [class="conky"] move to output primary
 # for_window [class="Lazarus"] floating enable
 for_window [class="MATLAB R2015a" title="^Fig"] no_focus
 for_window [class="MATLAB R2015a" title="^Fig"] move to workspace number 3
+for_window [class="MATLAB R2018b" title="^Fig"] no_focus
+for_window [class="MATLAB R2018b" title="^Fig"] move to workspace number 3
 # for_window [class="matplotlib" title="^Fig"] move to workspace number 3
 # for_window [class="MATLAB R2015a" title="^Fig"] floating enable
 for_window [class="matplotlib"] floating enable
