--- a/doti3/dotlbdb/ldap.rc
+++ b/doti3/dotlbdb/ldap.rc
@@ -1,17 +1,19 @@
 %ldap_server_db = (
-  'cvut'          => ['ldap.feld.cvut.cz:389',
+  'cvut'   => ['ldap.feld.cvut.cz:389',
            'ou=People,o=feld.cvut.cz',
-           'givenname sn cn mail', 'givenname sn cn mail',
-           '${mail}', '${givenname} ${sn}']
+           'givenname sn cn mail',
+           'givenname sn cn mail o',
+           '${mail}', '${cn}', '${o}']
 );
 
 # hostname of your ldap server
-$ldap_server = 'ldaps://ldap.catalyst.net.nz:636';
-$search_base = 'ou=Staff,ou=People,dc=catalyst,dc=net,dc=nz';
+$ldap_server = 'ldap.feld.cvut.cz:389';
+$search_base = 'ou=People,o=feld.cvut.cz';
 $ldap_search_fields    = 'givenname sn cn mail';
 $ldap_expected_answers = 'givenname sn cn mail';
 $ldap_result_email     = '${mail}';
-$ldap_result_realname  = '${givenname} ${sn}';
+$ldap_result_realname  = '${cn}';
+$ldap_result_comment   = '${o}';
 $ignorant = 0;
 $ldap_bind_dn = '';
 $ldap_bind_password = '';
