--- a/doti3/dotlbdb/ldap.rc
+++ b/doti3/dotlbdb/ldap.rc
@@ -2,8 +2,8 @@
   'cvut'   => ['ldap.feld.cvut.cz:389',
            'ou=People,o=feld.cvut.cz',
            'givenname sn cn mail',
-           'givenname sn cn mail o',
-           '${mail}', '${cn}', '${o}']
+           'givenname sn cn mail telephonenumber',
+           '${mail}', '${cn}', '${telephonenumber}']
 );
 
 # hostname of your ldap server
@@ -12,8 +12,8 @@ $search_base = 'ou=People,o=feld.cvut.cz';
 $ldap_search_fields    = 'givenname sn cn mail';
 $ldap_expected_answers = 'givenname sn cn mail';
 $ldap_result_email     = '${mail}';
-$ldap_result_realname  = '${cn}';
-$ldap_result_comment   = '${o}';
+$ldap_result_realname  = '${givenname}';
+$ldap_result_comment   = '${telephonenumber}';
 $ignorant = 0;
 $ldap_bind_dn = '';
 $ldap_bind_password = '';
