--- a/doti3/config
+++ b/doti3/config
@@ -376,7 +376,7 @@ bindsym XF86Tools exec "urxvt -e zsh -c 'vim ~/.i3/config'"
 #exec google-chrome
 
 # setup monitors, generete the file with "arandr" utility
-# exec --no-startup-id ~/.i3/swapLayout.sh
+exec --no-startup-id ~/.screenlayout/three_monitor_lab.sh
 #~/.screenlayout/Single.sh
 bindsym $mod+Shift+p exec ~/.i3/swapLayout.sh
 bindsym $mod+Shift+o exec ~/.i3/externOnly.sh
