Storing changes before split

--- a/doti3/dotsup/config.yaml
+++ b/doti3/dotsup/config.yaml
@@ -31,6 +31,7 @@
     :alternates:
     - viktor_walter@outlook.com
     - ciernobiely@gmail.com
+    - viktor.walter@disroot.org
     :sendmail: msmtp -t --read-envelope-from
     :signature: "/home/viktor/.sup/signature"
     :gpgkey: ''
