--- a/utilities/sup_mail/dotsup/sources.yaml
+++ b/utilities/sup_mail/dotsup/sources.yaml
@@ -8,6 +8,14 @@
   labels:
   - F
 - !supmua.org,2006-10-01/Redwood/Maildir
+  uri: maildir:/home/viktor/mail/fel_x/inbox
+  usual: true
+  archived: false
+  sync_back: true
+  id: 7
+  labels:
+  - Fx
+- !supmua.org,2006-10-01/Redwood/Maildir
   uri: maildir:/home/viktor/mail/outlook/inbox
   usual: true
   archived: false
