--- a/utilities/sup_mail/dotsup/config.yaml
+++ b/utilities/sup_mail/dotsup/config.yaml
@@ -14,14 +14,15 @@
 :discard_snippets_from_encrypted_messages: false
 :load_more_threads_when_scrolling: true
 :default_attachment_save_dir: ''
-:sent_source: sup://sent
+:sent_source: mbox:/home/viktor/.sup/sent.mbox
 :archive_sent: true
 :poll_interval: 300
 :wrap_width: 0
 :slip_rows: 0
+:indent_spaces: 2
 :col_jump: 2
 :stem_language: english
-:sync_back_to_maildir: true
+:sync_back_to_maildir: false
 :continuous_scroll: false
 :always_edit_async: false
 :accounts:
@@ -31,23 +32,26 @@
     :sendmail: msmtp -t --account=work --read-envelope-from
     :signature: "/home/viktor/.sup/signature"
     :gpgkey: ''
+    :alternates: []
   :personal:
     :name: Viktor Walter
     :email: viktor.walter@disroot.org
     :sendmail: msmtp -t --account=personal --read-envelope-from
-    :signature: ""
+    :signature: ''
     :gpgkey: ''
+    :alternates: []
   :outlook:
     :name: Viktor Walter
     :email: viktor_walter@outlook.com
     :sendmail: msmtp -t --account=outlook --read-envelope-from
-    :signature: ""
+    :signature: ''
     :gpgkey: ''
+    :alternates: []
   :frivolous:
     :name: Viktor Walter
     :email: ciernobiely@gmail.com
     :sendmail: msmtp -t --account=frivolous --read-envelope-from
-    :signature: ""
+    :signature: ''
     :gpgkey: ''
-
+    :alternates: []
 :time_mode: 24h
