--- a/utilities/sup_mail/dotsup/sources.yaml
+++ b/utilities/sup_mail/dotsup/sources.yaml
@@ -1,5 +1,5 @@
 ---
-- !supmua.org,2006-10-01/Redwood/Maildir
+- !<tag:supmua.org,2006-10-01/Redwood/Maildir>
   uri: maildir:/home/viktor/mail/fel/inbox
   usual: true
   archived: false
@@ -7,15 +7,7 @@
   id: 1
   labels:
   - F
-- !supmua.org,2006-10-01/Redwood/Maildir
-  uri: maildir:/home/viktor/mail/fel_x/inbox
-  usual: true
-  archived: false
-  sync_back: true
-  id: 7
-  labels:
-  - Fx
-- !supmua.org,2006-10-01/Redwood/Maildir
+- !<tag:supmua.org,2006-10-01/Redwood/Maildir>
   uri: maildir:/home/viktor/mail/outlook/inbox
   usual: true
   archived: false
@@ -23,7 +15,7 @@
   id: 2
   labels:
   - O
-- !supmua.org,2006-10-01/Redwood/Maildir
+- !<tag:supmua.org,2006-10-01/Redwood/Maildir>
   uri: maildir:/home/viktor/mail/outlook/inbox_oj
   usual: true
   archived: false
@@ -31,7 +23,7 @@
   id: 3
   labels:
   - Oj
-- !supmua.org,2006-10-01/Redwood/Maildir
+- !<tag:supmua.org,2006-10-01/Redwood/Maildir>
   uri: maildir:/home/viktor/mail/gmail/inbox
   usual: true
   archived: false
@@ -39,7 +31,7 @@
   id: 4
   labels:
   - G
-- !supmua.org,2006-10-01/Redwood/Maildir
+- !<tag:supmua.org,2006-10-01/Redwood/Maildir>
   uri: maildir:/home/viktor/mail/disroot/inbox
   usual: true
   archived: false
@@ -47,7 +39,7 @@
   id: 5
   labels:
   - D
-- !supmua.org,2006-10-01/Redwood/Maildir
+- !<tag:supmua.org,2006-10-01/Redwood/Maildir>
   uri: maildir:/home/viktor/mail/disroot/junk
   usual: true
   archived: false
@@ -55,4 +47,18 @@
   id: 6
   labels:
   - Dj
-- !supmua.org,2006-10-01/Redwood/SentLoader {}
+- !<tag:supmua.org,2006-10-01/Redwood/Maildir>
+  uri: maildir:/home/viktor/mail/fel_x/inbox
+  usual: true
+  archived: false
+  sync_back: true
+  id: 7
+  labels:
+  - Fx
+- !<tag:supmua.org,2006-10-01/Redwood/MBox>
+  uri: mbox:/home/viktor/.sup/sent.mbox
+  usual: true
+  archived: false
+  id: 8
+  labels:
+  - SENT
